# tabular-dl-optimizers

./: .gitignore  README.md  pyproject.toml
assets/: README.md  appendix_all_results.tex  appendix_muon_vs_polarexpress.tex  appendix_optimizer_spaces.tex  transfer_table.tex
exp/mlp-piecewiselinear/adamw-ema/adult/evaluation/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/adult/tuning/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/black-friday/evaluation/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/black-friday/tuning/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/california/evaluation/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/california/tuning/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/churn/evaluation/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/churn/tuning/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/diamond/evaluation/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/diamond/tuning/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/higgs-small/evaluation/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/higgs-small/tuning/: config.toml  report.json
exp/mlp-piecewiselinear/adamw-ema/house/evaluation/: config.toml  report.json
lib/: data.py  deep.py  env.py  experiment.py  metrics.py  paper_data.py  results.py  types.py  util.py
lib/optim/: __init__.py  adabelief.py  c_adamw.py  signum.py
notebooks/: make_artifacts.ipynb
tools/: prepare_tabred.py
(+1878 files in other folders)
