[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tabular-dl-optimizers"
version = "0.1.0"
requires-python = "==3.12.9"
dependencies = [
    "delu==0.0.26",
    "loguru==0.7.3",
    "numpy==2.3.1",
    "optuna==4.4.0",
    "scikit-learn==1.7.0",
    "rtdl_num_embeddings==0.0.12",
    "rtdl_revisiting_models==0.0.2",
    "scipy==1.16.0",
    "tabm==0.0.3",
    "tensorboard==2.19.0",
    "tomli-w==1.2.0",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "pandas==2.3.3"
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.3,<5",
    "notebook>=7.4.3,<8",
    "nbclassic>=1.3.1,<2",
    "ipykernel>=6.29.5,<7",
    "matplotlib>=3.10.3,<4",
    "nbformat>=5.10.4,<6",
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["^local/*", "^vendor/*"]

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "cache",
    "data",
    "local",
    "vendor",
    "**/exp",
]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
extend-exclude = [
    "lib/optim/c_adamw.py",
    "lib/optim/muon_polar_express.py",
    "lib/optim/adabelief.py",
    "vendor/**/*.py"
]

[tool.ruff.lint]
extend-select = ["RUF", "UP", "E501", "E731"]

[tool.ruff.format]
quote-style = "single"

[tool.setuptools]
packages = ["bin", "lib", "lib.optim", "vendor", "tools"]
